--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <button class="ham"></button>
         <nav class="navbar">
             <ul>
-                <li><a class="menuLink" href="#">Home</a></li>
-                <li><a class="menuLink" href="#">About</a></li>
-                <li><a class="menuLink" href="#">Investing</a></li>
-                <li><a class="menuLink" href="#">Customers</a></li>
-                <li><a class="menuLink" href="#">Contacts</a></li>
+                <li><a class="menuLink" href="#home">Home</a></li>
+                <li><a class="menuLink" href="#about">About</a></li>
+                <li><a class="menuLink" href="#invest">Investing</a></li>
+                <li><a class="menuLink" href="#customers">Customers</a></li>
+                <li><a class="menuLink" href="#cont">Contacts</a></li>
             </ul>
         </nav>
 
         <div class="hero-text-box">
             <h1>Investing should be more like watching paint dry or watching grass grow.<br>If you want excitement, take $800 and go to Las Vegas.</h1>
-            <a class="btn btn-full" href="#">Investment options</a>
-            <a class="btn btn-ghost" href="#">Contact me</a>
+            <a class="btn btn-full" href="#invest">Investment options</a>
+            <a class="btn btn-ghost" href="#cont">Contact me</a>
         </div>
     </header>
 
-    <section>
+    <section id="about">
         <h2>About</h2>
         <div class="row">
             <div class="col col-2 text-center mt-2">
@@ -50,7 +50,7 @@
         </div>
     </section>
 
-    <section class="s2">
+    <section class="s2" id="invest">
         <h2>Investing</h2>
         <div class="row">
             <div class="col col-3 text-center">
@@ -80,7 +80,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="customers">
         <h2>Customers</h2>
         <h4 class="text-center">Some of our customers</h4>
         <div class="row">
@@ -124,12 +124,12 @@
                 <h5>Join us NOW for FREE.</h5>
             </div>
             <div class="col col-ban text-left banner">
-                <a class="btn_b btn-banner" href="#">JOIN NOW!</a>
+                <a class="btn_b btn-banner" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">JOIN NOW!</a>
             </div>
         </div>
     </section>
 
-    <section class="s2 text-center cont">
+    <section class="s2 text-center cont" id="cont">
         <h2>Contacts</h2>
         <div class="row">
             <div class="col col-con text-center mt-2">
